--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vanilla-vite",
+  "name": "0602",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,5 +10,8 @@
   },
   "devDependencies": {
     "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.49.8"
   }
 }
